<resources>

    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="ok">OK</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="unitText">Measurement Unit</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_forecast">ForecastActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="tempText">Temperature Unit</string>
    <string name="app_name">Weather Forecast</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="fetchingData">Fetching Data... Please wait</string>
    <string-array name="navigation_drawer_items_array">
        <item>Today</item>
        <item>Forecast</item>
    </string-array>

    <string-array name="directions_array">
        <item>N</item>
        <item>NNE</item>
        <item>NE</item>
        <item>ENE</item>
        <item>E</item>
        <item>ESE</item>
        <item>SE</item>
        <item>SSE</item>
        <item>S</item>
        <item>SSW</item>
        <item>SW</item>
        <item>WSW</item>
        <item>W</item>
        <item>WNW</item>
        <item>NW</item>
        <item>NNW</item>
    </string-array>

</resources>
