<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="android.weather.prerak.com.navigationdrawer.Settings">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tempText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/tempSettings_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="5sp"
        android:paddingTop="5sp"
        android:textColor="@color/textView_settings_title"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tempSettings"
        android:layout_below="@+id/tempSettings_text"
        android:paddingBottom="10sp">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celsius"
            android:id="@+id/unitC"
            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit"
            android:id="@+id/unitF"/>

    </RadioGroup>

    <View
        android:background="@color/line_color"
        android:layout_width = "fill_parent"
        android:layout_height="1dip"
        android:layout_centerVertical ="true"
        android:layout_below="@+id/tempSettings"
        android:paddingTop="20sp"
        android:paddingBottom="20sp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/unitText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/settings_text"
        android:layout_below="@+id/tempSettings"
        android:paddingTop="15sp"
        android:paddingBottom="5sp"
        android:textColor="#8e144a8e" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/unitSettings"
        android:layout_below="@+id/settings_text">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metric"
            android:id="@+id/unitM"
            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imperial"
            android:id="@+id/unitI"/>

    </RadioGroup>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp" />

</RelativeLayout>
